# CipherCat

./: .editorconfig  .gitignore  LICENSE.txt  README.md  RULES.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docker/: Dockerfile  docker-build-linux.sh  docker-build-macos.sh  docker-build-windows.sh  docker-dev.sh
docs/: ARCHITECTURE.md  DEVELOPMENT.md  README.md
docs/fips202-SHA3/: 01-Theta.md  02-Rho.md  03-Pi.md  04-Chi.md  05-rc.md  06-Iota.md  07-KECCAK-p.md  08-SPONGE.md  09-pad10star1.md  10-h2b.md  11-b2h.md  README.md  SHA3-functions.md  SHAKE-functions.md
docs/fips203-ML-KEM/: 01-ForExample.md  02-SHAKE128example.md  03-BitsToBytes.md  04-BytesToBits.md  05-ByteEncode.md  06-ByteDecode.md  07-SampleNTT.md  08-SamplePolyCBD.md  09-NTT.md  10-INTT.md  11-MultiplyNTTs.md  12-BaseCaseMultiply.md  13-K-PKE-KeyGen.md  14-K-PKE-Encrypt.md  15-K-PKE-Decrypt.md  16-ML-KEM-KeyGen-internal.md  17-ML-KEM-Encaps-internal.md  18-ML-KEM-Decaps-internal.md  19-ML-KEM-KeyGen.md  20-ML-KEM-Encaps.md  21-ML-KEM-Decaps.md  Compress.md  README.md
docs/fips204-ML-DSA/: 01-ML-DSA.KeyGen.md  02-ML-DSA.Sign.md  03-ML-DSA.Verify.md  04-HashML-DSA.Sign.md  05-HashML-DSA.Verify.md  06-ML-DSA.KeyGen_internal.md  09-IntegerToBits.md  (+43 more)
paper/: ciphercat-draft.tex
scripts/: generate_icons.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  blockly_workspace (1).json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
test/: acvp_mlkem768_vectors.json  gen_acvp_vectors.py  nist_acvp_verify.py
(+161 files in other folders)
